# Unofficial-Krita-Onion-Skin-Overlay

./: CMakeLists.txt  README.md  config-qt-patches-present.h.cmake
build-tools/ci-scripts/: build-windows-package.py  upload-nightly-packages.py  windows.yml
cmake/modules/: SIPMacros.cmake
krita/: CMakeLists.txt  krita5.xmlgui  kritamenu.action  kritamenu_android.action  main.cc  org.kde.krita.appdata.xml  org.kde.krita.desktop
krita/data/: CMakeLists.txt
libs/flake/: KoCanvasBase.cpp  KoCanvasBase.h  KoPathShape.cpp  KoSnapGuide.cpp  KoSnapGuide.h  flake.qrc
libs/global/: KisAndroidUtils.cpp  KisAndroidUtils.h  KisHandleStyle.cpp  KisHandleStyle.h  KisUsageLogger.h  kis_algebra_2d.h  kis_painting_tweaks.cpp  kis_painting_tweaks.h
libs/image/: kis_base_rects_walker.h  kis_paint_layer.cc  kis_selection_filters.cpp
libs/libkis/: View.cpp  View.h
libs/metadata/: kis_meta_data_parser.cc
libs/pigment/: CMakeLists.txt  HDR_DESIGN_NOTES.md  KoColorConversionSystem.cpp  KoColorConversions.cpp  KoColorDisplayRendererInterface.cpp  KoColorDisplayRendererInterface.h  KoColorProfile.cpp  KoColorProfile.h  KoColorProfileQuery.h  KoColorProfileStorage.cpp  KoColorProfileStorage.h  KoColorSpace.cpp  KoColorSpaceEngine.h  KoColorSpaceFactory.cpp  KoColorSpaceFactory.h  KoColorSpaceRegistry.cpp  KoColorSpaceRegistry.h  KoColorSpace_p.h  KoColorTransferFunctions.h  KoColorimetryUtils.cpp  KoColorimetryUtils.h
libs/resources/: KisStorageModel.cpp  KisStorageModel.h  KoCanvasResourcesIds.h
libs/surfacecolormanagementapi/: CMakeLists.txt
libs/ui/: CMakeLists.txt  (+43 more)
plugins/dockers/recorder/: CMakeLists.txt  recorder_export.cpp  recorder_export.h  recorder_export.ui  recorder_export_config.cpp  recorder_export_config.h  recorder_export_settings.h  recorderdocker_dock.cpp
plugins/tools/tool_knife/: CMakeLists.txt  CutThroughShapeStrategy.cpp  CutThroughShapeStrategy.h  RemoveGutterStrategy.cpp  RemoveGutterStrategy.h
plugins/tools/tool_knife/tests/: CMakeLists.txt  CutThroughShapeStrategyTest.cpp  CutThroughShapeStrategyTest.h
(+437 files in other folders)
